--- a/kitchen/templates/kitchen/products.html
+++ b/kitchen/templates/kitchen/products.html
@@ -11,7 +11,7 @@
 {% block extrascript %} {% endblock %}
 
 {% block breadcrumbs %}
-    {% breadcrumb_url 'Home' 'home' 'Courses' %}
+    {% breadcrumb_url 'Index' 'kitchen_index' 'Ingredients' %}
 {% endblock %}
 
 
@@ -20,41 +20,9 @@
 
 
 
-<h1> List of Courses </h1>
+<h1>List of Ingredients</h1>
 
 
-{% for c in courses %}
-
-<div class="row">
-    <div class="col-md-7">
-        <a href="{{ c.get_absolute_url }}">
-            {% if c.image %}
-            <img class="img-fluid rounded mb-3 mb-md-0" src="/media/{{c.image}}" alt="">
-            {% else %}
-            <img class="img-fluid rounded mb-3 mb-md-0" src="{% static 'img/default_course.jpg' %}" alt="">
-            {% endif %}
-        </a>
-    </div>
-    <div class="col-md-5">
-        <h3>{{c.name}}</h3>
-        <p>
-            {{c.description|truncatechars:255}}
-        </p>
-        <a class="btn btn-primary" href="{{ c.get_absolute_url }}">More Details</a>
-    </div>
-</div>
-
-<hr>
-
-{% empty %}
-
-<div class="row">
-    <div>
-        <h3> No course available</h3>
-    </div>
-</div>
-
-{% endfor %}
 
 
 {% endblock %}
