--- a/kitchen/templates/kitchen/index.html
+++ b/kitchen/templates/kitchen/index.html
@@ -3,7 +3,7 @@
 {% load tag_utils %}
 
 
-{% block title %} List of Courses {% endblock %}
+{% block title %} SnackBar! {% endblock %}
 
 {% block extrahead %} {% endblock %}
 
@@ -25,7 +25,7 @@
 <h3>Actions:</h3>
 <ul>
     <li><a href="#">New Ingredient (Owner)</a></li>
-    <li><a href="#">Create your Snack (Customer)</a></li>
+    <li><a href="{% url 'kitchen_create_snack' %}">Create your own Snack (Customer)</a></li>
 </ul>
 
 <h3>List of requested snacks</h3>
