Added template for create snack and create ingredient

--- a/kitchen/templates/kitchen/index.html
+++ b/kitchen/templates/kitchen/index.html
@@ -24,7 +24,7 @@
 
 <h3>Actions:</h3>
 <ul>
-    <li><a href="#">New Ingredient (Owner)</a></li>
+    <li><a href="{% url 'kitchen_ingredient'%}">Ingredients (Owner)</a></li>
     <li><a href="{% url 'kitchen_create_snack' %}">Create your own Snack (Customer)</a></li>
 </ul>
 
