--- a/kitchen/templates/kitchen/createsnack.html
+++ b/kitchen/templates/kitchen/createsnack.html
@@ -25,7 +25,7 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend>Create your Own Snack</legend>
-            {% if createsnack_form_is_valid %}
+            {% if product_saved %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>Snack created with Success! Now wait for the Order :)
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
@@ -33,6 +33,21 @@
                     </button>
             </div>
             {% endif %}
+
+            {% for field in product_form %}
+            <div class="form-group">
+                {% if not field.errors%}
+                <label class="form-control-label">{{ field.label }}</label>
+                {{ field|add_class:"form-control" }}
+                {% else %}
+                <label class="form-control-label text-danger">{{ field.label }}</label>
+                {{ field|add_class:"form-control is-invalid" }}
+                {% for error in field.errors %}
+                <span class="badge badge-danger"> {{ error }} </span>
+                {% endfor %}
+                {% endif %}
+            </div>
+            {% endfor %}
 
             {% for field in snack_form %}
             <div class="form-group">
