Added table to list the ingredients

--- a/kitchen/templates/kitchen/createsnack.html
+++ b/kitchen/templates/kitchen/createsnack.html
@@ -27,7 +27,7 @@
             <legend>Create your Own Snack</legend>
             {% if product_saved %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Snack created with Success! Now wait for the Order :)
+                <strong>Snack created with Success! Now wait for the Order :)</strong>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
