--- a/kitchen/templates/kitchen/ingredient.html
+++ b/kitchen/templates/kitchen/ingredient.html
@@ -29,10 +29,10 @@
             <legend>Register a new Ingredient</legend>
             {% if ingredient_saved %}
             <div class="alert alert-success alert-dismissible fade show" role="alert">
-                <strong>Ingredient saved with Success. Check in the below list
-                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+                <strong>Ingredient saved with Success. Check in the below list</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
             {% endif %}
 
@@ -56,13 +56,28 @@
     </form>
 </div>
 
+<div class="row">
+    <div class="col-sm-12">
+        <h3>List of Ingredients</h3>
+        <table class="table table-hover">
+            <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Ingredient Name</th>
+                <th scope="col">Price (R$)</th>
+            </tr>
+            </thead>
+            <tbody>
+            {% for ing in ingredients%}
+            <tr>
+                <th scope="row">{{ing.id}}</th>
+                <td>{{ing.name}}</td>
+                <td>R${{ing.price}}</td>
+            </tr>
+            {% endfor %}
+            </tbody>
+        </table>
+    </div>
+</div>
 
-<h3>List of Ingredients</h3>
-<ul>
-    {% for ing in ingredients%}
-    <li>{{ing.id}} - {{ing.name}}</li>
-    {% empty %}
-    <li>-EMPTY-</li>
-    {% endfor %}
-</ul>
 {% endblock %}
