--- a/kitchen/templates/kitchen/ingredient.html
+++ b/kitchen/templates/kitchen/ingredient.html
@@ -13,7 +13,7 @@
 {% block extrascript %} {% endblock %}
 
 {% block breadcrumbs %}
-
+    {% breadcrumb_url 'Home' 'kitchen_index' 'Ingredient'%}
 {% endblock %}
 
 
@@ -57,7 +57,7 @@
 </div>
 
 <div class="row">
-    <div class="col-sm-12">
+    <div class="col-md-9">
         <h3>List of Ingredients</h3>
         <table class="table table-hover">
             <thead>
