--- a/kitchen/templates/kitchen/createsnack.html
+++ b/kitchen/templates/kitchen/createsnack.html
@@ -10,7 +10,11 @@
 
 {% block extrastyle %} {% endblock %}
 
-{% block extrascript %} {% endblock %}
+{% block extrascript %}
+$("#alert-success").delay(3000).slideUp(200, function() {
+    $("#success-alert").slideUp(500);
+});
+{% endblock %}
 
 {% block breadcrumbs %}
     {% breadcrumb_url 'Home' 'kitchen_index' 'Create your Own Snack'%}
@@ -25,29 +29,14 @@
         {% csrf_token %}
         <fieldset class="form-group">
             <legend>Create your Own Snack</legend>
-            {% if product_saved %}
-            <div class="alert alert-success alert-dismissible fade show" role="alert">
+            {% if snack_saved %}
+            <div id="alert-success" class="alert alert-success alert-dismissible fade show" role="alert">
                 <strong>Snack created with Success! Now wait for the Order :)</strong>
                     <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
             </div>
             {% endif %}
-
-            {% for field in product_form %}
-            <div class="form-group">
-                {% if not field.errors%}
-                <label class="form-control-label">{{ field.label }}</label>
-                {{ field|add_class:"form-control" }}
-                {% else %}
-                <label class="form-control-label text-danger">{{ field.label }}</label>
-                {{ field|add_class:"form-control is-invalid" }}
-                {% for error in field.errors %}
-                <span class="badge badge-danger"> {{ error }} </span>
-                {% endfor %}
-                {% endif %}
-            </div>
-            {% endfor %}
 
             <div id="ing_form">
             {% for field in snack_form %}
