--- a/templates/base.html
+++ b/templates/base.html
@@ -13,8 +13,12 @@
 
     {% block extrahead %} {% endblock %}
 
-    <link rel='stylesheet' href='{% static "/libs/bootstrap/4.0.0/css/bootstrap.min.css" %}'/>
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/css/bootstrap.min.css"
+          integrity="sha384-PDle/QlgIONtM1aqA2Qemk5gPOE7wFq8+Em+G/hmo5Iq0CCmYZLv3fVRDJ4MMwEA"
+          crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css"
+          integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/"
+          crossorigin="anonymous">
     <link rel='stylesheet' href='{% static "/css/base.css" %}'/>
     {% block extrastyle %} {% endblock %}
 
@@ -31,13 +35,19 @@
 
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
         <ul class="navbar-nav">
-            <li class="nav-item {% is_active request 'kitchen_index' %}"><a class="nav-link" href="{% url 'kitchen_index'%}">Home</a></li>
+            <li class="nav-item {% is_active request 'kitchen_index' %}"><a class="nav-link"
+                                                                            href="{% url 'kitchen_index'%}">Home</a>
+            </li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item {% is_active request 'kitchen_ingredient' %}"><a class="nav-link" href="{% url 'kitchen_ingredient'%}">Register Ingredient</a></li>
+            <li class="nav-item {% is_active request 'kitchen_ingredient' %}"><a class="nav-link"
+                                                                                 href="{% url 'kitchen_ingredient'%}">Register
+                Ingredient</a></li>
         </ul>
         <ul class="navbar-nav">
-            <li class="nav-item {% is_active request 'kitchen_create_snack' %}"><a class="nav-link" href="{% url 'kitchen_create_snack'%}">Create Snack</a></li>
+            <li class="nav-item {% is_active request 'kitchen_create_snack' %}"><a class="nav-link"
+                                                                                   href="{% url 'kitchen_create_snack'%}">Create
+                Snack</a></li>
         </ul>
     </div>
 </nav>
@@ -56,16 +66,20 @@
 
 <footer class="py-4 bg-dark">
     <div class="container">
-        <p class="m-0 text-center text-white">Snack Bar App, 2018 - All Rights Reserved ®
+        <p class="m-0 text-center text-white">Snack Bar App, 2019 - All Rights Reserved ®
     </div>
 </footer>
 
 
-<script src="{% static '/libs/jquery/3.3.1/jquery.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-<script src="{% static '/libs/bootstrap/4.0.0/js/bootstrap.min.js' %}"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+        integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.0/js/bootstrap.min.js"
+        integrity="sha384-7aThvCh9TypR7fIc2HV4O/nFMVCBwyIUKL8XCtKE+8xgCgl/PQGuFsvShjr74PBp"
+        crossorigin="anonymous"></script>
 
 <script>
 {% block extrascript %} {% endblock %}
